# codex-telegram-remote

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
codex_remote/: __init__.py  bridge.py  codex_rpc.py  formatting.py  state.py
docs/: ARCHITECTURE.md  COMMANDS.md  INSTALL.md  TROUBLESHOOTING.md
tests/: test_bridge_decisions.py  test_bridge_thread_commands.py  test_formatting.py  test_state.py  test_thread_views.py
