[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-telegram-remote"
version = "0.1.0"
description = "Hermes plugin for controlling Codex from Telegram."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "codex-telegram-remote contributors" }
]
keywords = ["codex", "telegram", "hermes", "remote-control"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
]

[tool.setuptools]
packages = ["codex_remote"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
